--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,15 @@
-apply plugin: 'com.android.application'
+plugins {
+    id 'com.android.application'
+    id 'com.google.gms.google-services'
+}
 
 android {
     namespace 'com.limpag.agrospread'
-    compileSdkVersion 33
+    compileSdkVersion 34 // Updated to match required API level for dependencies
     defaultConfig {
         applicationId "com.limpag.agrospread"
-        minSdkVersion 21
-        targetSdkVersion 33
+        minSdkVersion 23 // Updated to match Firebase Auth library's requirements
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
     }
@@ -26,25 +29,31 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
 }
 
-
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.viewpager2:viewpager2:1.0.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.viewpager2:viewpager2:1.0.0'
-    implementation 'androidx.webkit:webkit:1.4.0'
+    // Firebase BOM (to manage versions)
+    implementation platform('com.google.firebase:firebase-bom:33.5.1')
+
+    // Firebase libraries
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-database'
+    implementation 'com.google.firebase:firebase-firestore'
+    implementation 'com.google.firebase:firebase-storage:20.0.0'
+
+    // AndroidX libraries
     implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.6.1'
-    implementation 'androidx.annotation:annotation:1.8.2'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'com.google.android.material:material:1.9.0'
-    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+    implementation 'androidx.annotation:annotation:1.8.2'
+    implementation 'androidx.webkit:webkit:1.4.0'
+
+    // CircleImageView library for profile images
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
