--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,18 +2,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
 
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="Erlangga Shop"
+        android:label="AgroSpread"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <!-- LoginActivity sebagai Launcher -->
         <activity
             android:name=".LoginActivity"
             android:exported="true">
@@ -23,15 +24,15 @@
             </intent-filter>
         </activity>
 
-        <!-- MainActivity -->
+
         <activity
             android:name=".MainActivity"
             android:exported="true" />
 
-        <!-- DetailActivity -->
+
         <activity android:name=".DetailActivity" />
 
-        <!-- SignupActivity -->
+
         <activity android:name=".SignupActivity" android:exported="false" />
 
     </application>
