--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,17 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    repositories {
+        google()  // Google's Maven repository
+        mavenCentral()  // Maven Central repository
+    }
+    dependencies {
+        // Add the classpath for Google services plugin here
+        classpath 'com.android.tools.build:gradle:7.4.2'  // Android Gradle plugin
+        classpath 'com.google.gms:google-services:4.4.2'  // Google services plugin
+    }
+}
+
 plugins {
     id 'com.android.application' version '7.4.2' apply false
     id 'com.android.library' version '7.4.2' apply false
+    id("com.google.gms.google-services") version "4.4.2" apply false
 }
